add jasmine-sproutcore to vendored list of sources for jasmine

--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -14,6 +14,7 @@ src_files:
     - public/javascripts/**/*.js
     - vendor/sproutcore/**/*.js
     - vendor/simulo/**/*.js
+    - vendor/jasmine-sproutcore/**/*.js
     - apps/todos/todos.js
     - apps/todos/models/*.js
     - apps/todos/controllers/*.js
